--- a/Module 2 Coding Assignment.html
+++ b/Module 2 Coding Assignment.html
@@ -13,11 +13,12 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             text-align: center;
             margin-bottom: 30px;
+            background-color: rgb(254, 214, 165);
         }
         section{
-            background-color: grey;
+            background-color: rgb(167, 191, 237);
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            color: greenyellow;
+            color: rgb(14, 22, 1);
             padding-bottom: 15px;
             padding-top: 25px;
             margin-bottom: 10px;
@@ -32,7 +33,7 @@
             margin: 0;
         }
         #sh1{
-            background-color: aquamarine;
+            background-color: rgb(245, 181, 203);
             width: 75px;
             position: absolute ;
             right: 0;
@@ -40,7 +41,7 @@
             
         }
         #sh2{
-            background-color: aqua;
+            background-color: rgb(134, 232, 139);
             width: 75px;
             position: absolute;
             right: 0;
@@ -48,7 +49,7 @@
             
         }
         #sh3{
-            background-color: gold;
+            background-color: rgb(244, 240, 110);
             width: 125px;
             position: absolute;
             right: 0;
